--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.9",
+    "mongoose-unique-validator": "^2.0.3",
     "node-fetch": "^2.6.0",
     "tmi.js": "^1.5.0"
   },
