--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsdom": "^16.2.0",
     "mongoose": "^5.8.9",
     "mongoose-unique-validator": "^2.0.3",
     "node-fetch": "^2.6.0",
