--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "tmi.js": "^1.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "keywords": [
     "twitch",
