--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "card-searcher-bot",
   "version": "1.0.0",
-  "description": "A Twitch for searching Yu-Gi-Oh! cards in chat.",
+  "description": "A Twitch bot for searching Yu-Gi-Oh! cards in chat: (https://twitch.tv/cardsearcher)",
   "main": "bot.js",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^6.11.3",
+    "fastest-levenshtein": "^1.0.16",
+    "mongoose": "^6.11.4",
     "mongoose-unique-validator": "^3.1.0",
     "node-fetch": "^2.6.7",
     "tmi.js": "^1.5.0"
