--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A Twitch bot for searching Yu-Gi-Oh! cards in chat: (https://twitch.tv/cardsearcher)",
   "main": "bot.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fastest-levenshtein": "^1.0.16",
     "mongoose": "^6.11.4",
     "mongoose-unique-validator": "^3.1.0",
-    "node-fetch": "^2.6.7",
     "tmi.js": "^1.5.0"
   },
   "scripts": {
