--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Twitch bot for searching Yu-Gi-Oh! cards in chat: (https://twitch.tv/cardsearcher)",
   "main": "bot.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fastest-levenshtein": "^1.0.16",
