--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fastest-levenshtein": "^1.0.16",
+    "ioredis": "^5.3.2",
     "mongoose": "^6.11.4",
     "mongoose-unique-validator": "^3.1.0",
     "natural": "^6.7.0",
-    "redis": "^4.6.8",
     "tmi.js": "^1.5.0"
   },
   "scripts": {
