--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "card-searcher-bot",
   "version": "1.0.0",
-  "description": "A Twitch bot for searching Yu-Gi-Oh! cards in chat: (https://twitch.tv/cardsearcher)",
+  "description": "A Twitch bot for searching Yu-Gi-Oh! cards in chat. Visit https://twitch.tv/cardsearcher to get started.",
   "main": "bot.js",
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,7 +15,8 @@
     "tmi.js": "^1.5.0"
   },
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
   },
   "keywords": [
     "twitch",
